--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-select": "^2.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "react": "^18",
