--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "India's Advanced School Management SaaS",
   "main": "index.js",
   "scripts": {
+    "start": "concurrently \"npm run backend:start\" \"npm run frontend:start\"",
     "dev": "concurrently \"npm run backend:dev\" \"npm run frontend:dev\"",
     "backend:dev": "cd backend && npm run start:dev",
+    "backend:start": "cd backend && npm run start",
     "frontend:dev": "cd frontend && npm run dev",
+    "frontend:start": "cd frontend && npm run start",
     "build": "npm run backend:build && npm run frontend:build",
     "backend:build": "cd backend && npm run build",
     "frontend:build": "cd frontend && npm run build"
